estilos/style.css
@charset "UTF-8";

/*Paleta #0b2c3b blue , #6c757d gray*/


* {
    font-family: "Roboto", sans-serif;
    padding: 0px;
    margin-bottom: 15px;
    box-sizing: border-box;
}


html, body {
    background-color:  #0b2c3b;
    height: 100vh;
    width: 100vw;
}

main {
    position: relative;
    height: 100vh;
    width: 100vw;
}

section#login {

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    overflow: hidden;

    background-color: white;
    padding: 15px;
    width: 300px;
    height: 400px;
    border-radius: 20px;
    box-shadow: 1px 1px 8px #000000;
}

div#formulario > h1 {
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, 0.886);
    color: white;
    border-radius: 10px;
    width: 100%;
    padding: 5px 5px;
    margin-bottom: 10px;
    margin-top: 10px;
}

#formulario > p {
    font-size: 1.2em;
}

.material-symbols-outlined {
    position: absolute;
    padding-left: 4px;
}

form > div.campo {
    display: block;
}

div.campo > input {
    font-size: 1em;
    padding: 3px;    
    
}

form > input[type=submit] {
    display: block;
    width: 100%;
    margin-bottom: 15px;
    padding: 5px 0px 5px 0px;
    background-color: #6c757d;
    color: white;
    border-radius: 3px;
    font-size: 1.2em;
    font-weight: bold;
}
form > input[type=submit]:hover {
    background-color: #393e42;
    cursor: pointer;
}

form > a.botao {
    color: black;
}

form > a.botao:hover {
    cursor: pointer;
}

